added memebers to cereate group and worked on cors
